# GrafikaKomputerowaProjekty

./: CMakeLists.txt  README.md  camera.cpp  camera.hpp  glad.c  main.cpp
include/glad/: glad.h
shaders/: raytrace.frag
